# heroehs-alice-main

log_manager/: CMakeLists.txt  package.xml
log_manager/include/: log_manager.h
log_manager/src/: log_manager.cpp
main_controller/: CMakeLists.txt  package.xml
main_controller/launch/: main_controller.launch
main_controller/src/: .main_controller_node.cpp.swp  main_controller_node.cpp
record_vision/: CMakeLists.txt  package.xml
record_vision/launch/: record_vision.launch
record_vision/src/: record_vision_node.cpp
referee_receiver/: CMakeLists.txt  package.xml
referee_receiver/launch/: referee_receiver.launch
referee_receiver/src/: referee_receiver_node.cpp
referee_sender/: CMakeLists.txt  package.xml
referee_sender/launch/: referee_sender.launch
referee_sender/src/: referee_sender_node.cpp
